<resources>
    <string name="app_name">HistoryQuizApp</string>
    <string name="grading_button">View Results</string>
    <string name="question_five_wrong_answer">American</string>
    <string name="question_five_correct_answer">Kenyan</string>
    <string name="question_five">Of what origin was the father of the 44th President of America?</string>
    <string name="tag_line">Remember Your History?   \n Have a go at the questions below</string>
    <string name="score_rubric">You score a point for every correct answer :  \n Total points = 6</string>
    <string name="question_one">In what year did America attain Independence?</string>
    <string name="question_one_true_answer">4th July 1776</string>
    <string name="question_one_false_answer">4th July 1775</string>
    <string name="question_two">Who among the following were presidents once upon a time?</string>
    <string name="question_two_correct_answer_one">Abraham Lincoln</string>
    <string name="question_two_false_answer">Thomas Edison</string>
    <string name="question_two_correct_answer_two">Thomas Jefferson</string>
    <string name="question_three">How many states exist currently in America?</string>
    <string name="question_three_correct_answer">50 States</string>
    <string name="question_three_false_answer">49 States</string>
    <string name="question_four">Which country exists to the North of USA?</string>
    <string name="question_four_correct_answer">Canada</string>
    <string name="question_four_false_answer">North America</string>
    <string name="img_content_description">Statue of liberty</string>
    <string name="editText_Hint">Enter your Name</string>
</resources>
